# practica-calificada-4-alonso1311

./: CMakeLists.txt  Filter.h  Funciones.cpp  Funciones.h  Header.h  Rotated.cpp  Rotated.h  Teacher.cpp  main.cpp
Functions/: Filter.cpp  Header.h  Rotated.h  Teacher.h
